--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">World's Best Lasagna</a>
+        <ul>
+        <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
+        <li><a href="recipes/croque_madame.html">Croque Madame</a></li>
+        <li><a href="recipes/sloppy_joes.html">Sloppy Joe's</a></li>
+        </ul>
     </body>
 </html>
