changes to title

--- a/recipes/croque_madame.html
+++ b/recipes/croque_madame.html
@@ -4,6 +4,9 @@
         <meta lang="en">
     </head>
     <body>
+        <title>
+            Croque Madame
+        </title>
         <h1>
             Croque Madame<p>
             <img src="./croque_madame.webp"></p>
