--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,6 +4,9 @@
         <meta lang="EN">
     </head>
     <body>
+        <title>
+            Worlds Best Lasagna
+        </title>
         <h1>World's Best Lasagna</h1>
         <img src="./worlds-best-lasagna">
         <h2>Description</h2>
